--- a/BootstrapGrid.html
+++ b/BootstrapGrid.html
@@ -4,7 +4,9 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">  <link rel="stylesheet" href="GridHeader.css" />
-    <title>BootstrapGrid</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <title>BootstrapGrid</title>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
 
@@ -34,7 +36,7 @@
     <div class="text">
     <h1>DreamTravel</h1> 
     <p>Dare To Dream, Dare To Travel</p> 
-    <button type="button" class="btn btn-danger">Sign-In</button>
+    <button type="button" class="btn1 btn-danger">Sign-In</button>
   </div>
   </div>
   <!--divider-->
@@ -127,6 +129,12 @@
           <img src="https://res.klook.com/image/upload/q_85/c_fill,w_750/v1690984328/kgjxdn7ldnyh6ofdvvhr.jpg" alt="S.Korea" >
           <p><strong>South korea</strong></p>
           <p>K-Drama, K-Food, K-Beauty, K-Pop</p>
+          <a href="#demo" class="btn btn-info" data-toggle="collapse">Learn More</a>
+          <div id="demo" class="collapse">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </div>
         </div>
       </div>
       <div class="col-sm-4">
@@ -134,6 +142,12 @@
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT9djcOr0SjLwKazZ3yytR0JQTawr55HSHOqw&s" alt="Iceland" >
           <p><strong>IceLand</strong></p>
           <p>Nature,northern lights</p>
+          <a href="#demo2" class="btn btn-info" data-toggle="collapse">Learn More</a>
+          <div id="demo2" class="collapse">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </div>
         </div>
       </div>
       <div class="col-sm-4">
@@ -141,6 +155,12 @@
           <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTM6RI-x2jTTINkSoFerPJfoJmecYm1cPyIfw&s" alt="Northenern Europe">
           <p><strong>Northenern Europe</strong></p>
           <p>Architecture, History, Art and culture</p>
+          <a href="#demo3" class="btn btn-info" data-toggle="collapse">Learn More</a>
+          <div id="demo3" class="collapse">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+            quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          </div>
         </div>
       </div>
     </div>
@@ -211,5 +231,29 @@
   <!-- Image of location/map 
   <img src="./image" class="img-responsive" style="width:100% ;height:700px" >
   -->
+  <footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-4">
+        <h3>Column 1</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      </div>
+      <div class="col-sm-4">
+        <h3>Column 2</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      </div>
+      <div class="col-sm-4">
+        <h3>Column 3</h3>        
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p>
+      </div>
+    </div>
+  </div>
+  <div>
+    <p>&copy;All Copyrights reserved Shayma@2025.</p>
+  </div>
+</footer>
   </body>
   </html>
